fix scroll + blog article overflow

--- a/assets/css/elements/project/text-scroll.scss
+++ b/assets/css/elements/project/text-scroll.scss
@@ -2,6 +2,7 @@
     margin: 100px 0px;
     position: relative;
     overflow: hidden;
+    height: 12vw;
 
     .text {
         position: absolute;
@@ -14,14 +15,14 @@
         }
 
         &:nth-child(2) {
-            top: 100px;
+            top: 5vw;
         }
     }
 
     @media (max-width: $mobile) {
-        margin: 0px;
+        margin: 50px 0px;
         padding: 0px;
-        height: 100px;
+        height: 20vw;
 
         .text {
             font-size: 9vw;
@@ -31,7 +32,7 @@
             }
     
             &:nth-child(2) {
-                top: 50px;
+                top: 9vw;
             }
         }
     }
