--- a/assets/css/elements/simple-link.scss
+++ b/assets/css/elements/simple-link.scss
@@ -90,7 +90,7 @@
 
     div {
         position: relative;
-        z-index: 99;
+        z-index: 9;
     }
 
     &::after {
